--- a/About.html
+++ b/About.html
@@ -30,6 +30,9 @@
   </div>
 </nav>
 
+
+
+
 	<div class="container">
 		<div class="ab">
 		<h1>Our Team</h1>
@@ -37,9 +40,9 @@
 		<div class="sub-container ">
 	<div class="team">
 
-		<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/90/Twemoji_1f600.svg/1200px-Twemoji_1f600.svg.png" style="height: 100px;">
+		
 		<div class="name"> Kim Dwight H. Madula</div>
-		<div class="about">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </div>
+		<img src="https://scontent.fmnl9-2.fna.fbcdn.net/v/t1.15752-9/319164515_1063262368407703_3062569862106166964_n.jpg?_nc_cat=103&ccb=1-7&_nc_sid=ae9488&_nc_eui2=AeGERiR-CKFdGj-plbH7tq7qiW0dcthqcFSJbR1y2GpwVAAt8kDhyUMnfMeit4R-P1Qt1XFGJdj9_VwWogUiNbe4&_nc_ohc=aVWIOAGp2V8AX__3CjK&_nc_ht=scontent.fmnl9-2.fna&oh=03_AdS7uEJ5bgkPtEJlLnVjbZ0MeEt6rxhTCdrGBhtGlLjahw&oe=63C276E0"
 
 		<div class="social-links">
 			<a href="#"><i class="fa-brands fa-facebook-f"></i></a>
@@ -51,9 +54,9 @@
 	</div>
 
 	<div class="team">
-		<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/90/Twemoji_1f600.svg/1200px-Twemoji_1f600.svg.png" style="height: 100px;">
-		<div class="name"> Kim Dwight H. Madula</div>
-		<div class="about">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </div>
+		
+		<div class="name"> CARLA N. HACUMAN</div>
+		<img src="https://scontent.fmnl9-2.fna.fbcdn.net/v/t39.30808-6/255567718_288342399857333_5618487614742290266_n.jpg?_nc_cat=101&ccb=1-7&_nc_sid=174925&_nc_eui2=AeHS309AsAmAJPDDn_1B0EGJwTtc96aC0hvBO1z3poLSG4wp95-UOY5ZEz7zbS2de5CzxshY5q1q8VjdACCjag_h&_nc_ohc=n_NkJNeKThMAX9NYsc7&_nc_ht=scontent.fmnl9-2.fna&oh=00_AfAEaqONoMG9eEVGfrmFnyHIZbHOlBGFeUH0BGhCxKp42w&oe=63A0158A"
 
 		<div class="social-links">
 			<a href="#"><i class="fa-brands fa-facebook-f"></i></a>
@@ -65,9 +68,9 @@
 	</div>
 
 	<div class="team">
-		<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/90/Twemoji_1f600.svg/1200px-Twemoji_1f600.svg.png" style="height: 100px;">
-		<div class="name"> Kim Dwight H. Madula</div>
-		<div class="about">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </div>
+		
+		<div class="name"> SHANE ASID</div>
+		<img src="https://scontent.fmnl9-3.fna.fbcdn.net/v/t39.30808-6/318211786_814726692920433_8162031426840792495_n.jpg?_nc_cat=100&ccb=1-7&_nc_sid=a4a2d7&_nc_eui2=AeHiq9wntvRqDeBCxd-ftslJp4oldROmrjCniiV1E6auMHCR8MCOPZZIbjzrze8cwqPdKk54TJkrbCs1Vy6pEVei&_nc_ohc=ZFWNZOH0KkEAX-uv9Mm&tn=pibHSxPoVvetMb_5&_nc_ht=scontent.fmnl9-3.fna&oh=00_AfC2U3fSVkAhyqMQt7varOGCOpFRH3GLAGwjUVywdOGEug&oe=63A04C3E"
 
 		<div class="social-links">
 			<a href="#"><i class="fa-brands fa-facebook-f"></i></a>
@@ -79,5 +82,7 @@
 	</div>
 </div>
 </div>
+
+
 </body>
 </html>
