--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
       <img src="https://t4.ftcdn.net/jpg/02/71/69/95/360_F_271699566_gw98xaeyApL6fmAgmQSneYCdMtmGdfnA.jpg" style="height: 300px;" class="d-block w-100" alt="...">
     </div>
   </div>
+  </div>
+  </center>
   <!--
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -55,7 +57,7 @@
   </button>
 </div>
 -->
-</center>
+
 
 
     <div class="class1">
