--- a/basdaku.html
+++ b/basdaku.html
@@ -3,12 +3,13 @@
 <head>
 	<title>Destination</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
+  <script src="https://kit.fontawesome.com/cacab77a82.js" crossorigin="anonymous"></script>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </head>
 <body>
 <!---------------------------------------------------------------NAVBAR----------------------------------------------------------------------------------->
-<nav class="navbar navbar-expand-lg bg-light">
+<nav class="navbar navbar-expand-lg ">
   <div class="container-fluid">
     <a class="navbar-brand" href="#"></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -18,13 +19,13 @@
       <ul class="navbar-nav">
         <li class="nav-item">
           <a class="nav-link" aria-current="page" href="index.html" style="
-          color: #00BFFF;">Home</a>
+          color: #fff;">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="Destination.html" style="color:#00BFFF;">Destination</a>
+          <a class="nav-link" href="Destination.html" style="color:#fff;">Destination</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="About.html" style="color: #00BFFF;">About</a>
+          <a class="nav-link" href="About.html" style="color: #fffF;">About</a>
         </li>
       </ul>
     </div>
@@ -36,6 +37,13 @@
 <div class="card w-75">
   <div class="card-body">
     <h5 class="card-title fw-bold">Basdaku</h5>
+    <div class="stars">
+      <i class="fa fa-star checked"></i>
+      <i class="fa fa-star checked"></i>
+      <i class="fa fa-star checked"></i>
+      <i class="fa fa-star checked"></i>
+      <i class="fa fa-star"></i>
+    </div>
     <p class="card-text lh-base">In Moalboal, Cebu Province, there is a popular one-kilometer long stretch of white sand beach - Basdaku Beach Resort! Along the coastline of this beach you’ll find various sorts of establishments and facilities that cater to guests' needs who come to enjoy the beach and the sea. Basdaku Beach Resort is its popular name and considered one of the best beaches in Cebu. The name "basdaku" (or "basdakoo) is the Cebuano (Visayan language) transliteration for the word ‘big sand’ (bas for sand, daku for big or wide). Basdaku is not only a white sand beach but, of course, it has crystal clear and pristine seawater. The beach is very much available to the public and great for most activities allowed by the management that watches over and maintains its natural environment.</p>
     <div class="container text-center">
         <div class="row">
