--- a/santiago.html
+++ b/santiago.html
@@ -3,12 +3,13 @@
 <head>
 	<title>Destination</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
+  <script src="https://kit.fontawesome.com/cacab77a82.js" crossorigin="anonymous"></script>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </head>
 <body>
 <!---------------------------------------------------------------NAVBAR----------------------------------------------------------------------------------->
-<nav class="navbar navbar-expand-lg bg-light">
+<nav class="navbar navbar-expand-lg">
   <div class="container-fluid">
     <a class="navbar-brand" href="#"></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -18,13 +19,13 @@
       <ul class="navbar-nav">
         <li class="nav-item">
           <a class="nav-link" aria-current="page" href="index.html" style="
-          color: #00BFFF;">Home</a>
+          color: #fff;">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="Destination.html" style="color:#00BFFF;">Destination</a>
+          <a class="nav-link" href="Destination.html" style="color:#fff;">Destination</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="About.html" style="color: #00BFFF;">About</a>
+          <a class="nav-link" href="About.html" style="color: #fff;">About</a>
         </li>
       </ul>
     </div>
@@ -36,6 +37,11 @@
 <div class="card w-75">
   <div class="card-body">
     <h5 class="card-title fw-bold">Santiago Bay Garden and Resort</h5>
+      <div class="stars">
+      <i class="fa fa-star checked"></i>
+      <i class="fa fa-star checked"></i>
+      <i class="fa fa-star checked"></i>
+      </div>
     <p class="card-text lh-base">Nestled in the heart of Camotes Islands, Santiago Bay Garden and Resort is an ideal spot from which to discover Cebu. Set 157.4 Km from the excitement of the city, this 3-star hotel commands an excellent location and provides access to the city's biggest attractions. With its convenient location, the hotel offers easy access to the city's must-see destinations. </p>
     <div class="container text-center">
         <div class="row">
