--- a/paraiso.html
+++ b/paraiso.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <!---------------------------------------------------------------NAVBAR----------------------------------------------------------------------------------->
-<nav class="navbar navbar-expand-lg bg-light">
+<nav class="navbar navbar-expand-lg ">
   <div class="container-fluid">
     <a class="navbar-brand" href="#"></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -18,13 +18,13 @@
       <ul class="navbar-nav">
         <li class="nav-item">
           <a class="nav-link" aria-current="page" href="index.html" style="
-          color: #00BFFF;">Home</a>
+          color: #fff;">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="Destination.html" style="color:#00BFFF;">Destination</a>
+          <a class="nav-link" href="Destination.html" style="color:#fff;">Destination</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="About.html" style="color: #00BFFF;">About</a>
+          <a class="nav-link" href="About.html" style="color: #fff;">About</a>
         </li>
       </ul>
     </div>
