--- a/moalboal.html
+++ b/moalboal.html
@@ -18,13 +18,13 @@
       <ul class="navbar-nav">
         <li class="nav-item">
           <a class="nav-link" aria-current="page" href="index.html" style="
-          color: #00BFFF;">Home</a>
+          color:  #fff;">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="Destination.html" style="color: #00BFFF;">Destination</a>
+          <a class="nav-link" href="Destination.html" style="color:  #fff;">Destination</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="About.html" style="color: #00BFFF;">About</a>
+          <a class="nav-link" href="About.html" style="color:  #fff;">About</a>
         </li>
       </ul>
     </div>
