--- a/About.html
+++ b/About.html
@@ -42,8 +42,7 @@
             <div class="card-body">
                <h5>Kim Dwight H. Madula</h5>
            <div class="social-links">
-			<a href="#"><i class="fa-brands fa-facebook-f"></i></a>			
-			<a href="#"><i class="fa-solid fa-envelope"></i></a>
+			<a href="https://www.facebook.com/kimdwight.madula.1"><i class="fa-brands fa-facebook-f"></i></a>			
 		   </div>
             </div>    
        </div>
@@ -54,8 +53,7 @@
             <div class="card-body">
                <h5>Carla Hacuman</h5>
                <div class="social-links">
-			<a href="#"><i class="fa-brands fa-facebook-f"></i></a>			
-			<a href="#"><i class="fa-solid fa-envelope"></i></a>
+			<a href="https://www.facebook.com/carla.hacuman.12?mibextid=ZbWKwL"><i class="fa-brands fa-facebook-f"></i></a>			
 		   </div> 
             </div>
        </div>
@@ -66,8 +64,7 @@
              <div class="card-body">
                 <h5>Shane Mae Asid</h5>
                 <div class="social-links">
-			<a href="#"><i class="fa-brands fa-facebook-f"></i></a>			
-			<a href="#"><i class="fa-solid fa-envelope"></i></a>
+			<a href="https://www.facebook.com/shanemae.asid.1?mibextid=ZbWKwL"><i class="fa-brands fa-facebook-f"></i></a>			
 		   </div>
              </div>   
        </div>
