--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <!---------------------------------------------------------------CAROUSEL---------------------------------------------------------------------------------->
 <div class="class1">
               <h1> CEBU TOURIST SPOT</h1>
-              <p>>Cebu is brimming with wonders of nature such as the pristine white sand beaches, whale sharks and sardine run <br>that you can swim with, breathtaking hills and mountains, historic sites, and of course, delicious food!</p>
+              <p>Cebu is brimming with wonders of nature such as the pristine white sand beaches, whale sharks and sardine run <br>that you can swim with, breathtaking hills and mountains, historic sites, and of course, delicious food!</p>
     </div>
 
   <div id="carouselExampleInterval" class="carousel slide  carousel-fade" data-bs-ride="carousel-caption  d-block">
