--- a/bantayanresort.html
+++ b/bantayanresort.html
@@ -11,7 +11,9 @@
 <!---------------------------------------------------------------NAVBAR----------------------------------------------------------------------------------->
 <nav class="navbar navbar-expand-lg fixed-top">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#"></a>
+    <a class="navbar-brand" href="#"
+        <img src="https://citicar.com.ph/images/tourism_logo.png" alt="Bootstrap">
+       ></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
