--- a/About.html
+++ b/About.html
@@ -39,7 +39,7 @@
     <div class="col-4 col-md-6 col-lg-4">
        <div class="card">
         
-          <img src="https://scontent.fceb1-3.fna.fbcdn.net/v/t1.15752-9/319164515_1063262368407703_3062569862106166964_n.jpg?_nc_cat=103&ccb=1-7&_nc_sid=ae9488&_nc_eui2=AeG8JJ26jh7nOHh718HxN1sLiW0dcthqcFSJbR1y2GpwVMPP0A5ESaQJKNxSrsiGmOQhK2djVXxyHFI08yKb457F&_nc_ohc=b5-tWHFuFCwAX-YIrJ6&_nc_ht=scontent.fceb1-3.fna&oh=03_AdSAKBAZk6Bpo6DGnCpuQcX96SnqDq0UQDY3gAVjsb4RyQ&oe=63C8D620" class="card-img-top" style="height: 15rem;">
+          <img src="About.jpg" class="card-img-top" style="height: 15rem;">
             <div class="card-body">
                <h5>Kim Dwight H. Madula</h5>
            <div class="social-links">
@@ -50,7 +50,7 @@
     </div>
     <div class="col-4 col-md-6 col-lg-4">
        <div class="card">
-          <img src="https://scontent.fmnl9-2.fna.fbcdn.net/v/t39.30808-6/255567718_288342399857333_5618487614742290266_n.jpg?_nc_cat=101&ccb=1-7&_nc_sid=174925&_nc_eui2=AeHS309AsAmAJPDDn_1B0EGJwTtc96aC0hvBO1z3poLSG4wp95-UOY5ZEz7zbS2de5CzxshY5q1q8VjdACCjag_h&_nc_ohc=n_NkJNeKThMAX9NYsc7&_nc_ht=scontent.fmnl9-2.fna&oh=00_AfAEaqONoMG9eEVGfrmFnyHIZbHOlBGFeUH0BGhCxKp42w&oe=63A0158A" class="card-img-top" style="height: 15rem;">
+          <img src="carla.jpg" class="card-img-top" style="height: 15rem;">
             <div class="card-body">
                <h5>Carla Hacuman</h5>
                <div class="social-links">
@@ -61,7 +61,7 @@
     </div>
     <div class="col-4 col-md-6 col-lg-4">
        <div class="card">
-          <img src="https://scontent.fmnl9-3.fna.fbcdn.net/v/t39.30808-6/318211786_814726692920433_8162031426840792495_n.jpg?_nc_cat=100&ccb=1-7&_nc_sid=a4a2d7&_nc_eui2=AeHiq9wntvRqDeBCxd-ftslJp4oldROmrjCniiV1E6auMHCR8MCOPZZIbjzrze8cwqPdKk54TJkrbCs1Vy6pEVei&_nc_ohc=ZFWNZOH0KkEAX-uv9Mm&tn=pibHSxPoVvetMb_5&_nc_ht=scontent.fmnl9-3.fna&oh=00_AfC2U3fSVkAhyqMQt7varOGCOpFRH3GLAGwjUVywdOGEug&oe=63A04C3E" class="card-img-top" style="height: 15rem;">
+          <img src="shane.jpg" class="card-img-top" style="height: 15rem;">
              <div class="card-body">
                 <h5>Shane Mae Asid</h5>
                 <div class="social-links">
